    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Ansgar Burchardt <ansgar@debian.org>
    Seconded: Guillem Jover <guillem@debian.org>
    Closes: #679326
  * Policy: Checksums-{Sha1,Sha256} are now mandatory
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: Guillem Jover <guillem@debian.org>
    Seconded: Ansgar Burchardt <ansgar@debian.org>
    Closes: #690293
  * Remove outdated mention of dselect documentation.
    Closes: #700574.  Thanks, Guillem Jover.
  * Update dak reference from old katie name.
    Closes: #700536.  Thanks, Guillem Jover.
  * Fix typo in 8.6.4.  Thanks, Raúl Benencia.  (Closes: #691352)

 -- Russ Allbery <rra@debian.org>  Sat, 03 Nov 2012 15:32:46 -0700

debian-policy (3.9.4.0) unstable; urgency=low

  * build-arch and build-indep are now mandatory targets in debian/rules,
    implementing the Technical Committee ruling in #629385.  Wording
    review by Jonathan Nieder, Jakub Wilk, and Roger Leigh.
    (Closes: #374029)
  * Resynchronize the archive section list with ftp-master, adding tasks.
    Patch from Charles Plessy.  (Closes: #670429)
  * Policy: Copyright files must be encoded in UTF-8
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Guillem Jover <guillem@debian.org>
    Seconded: Salvatore Bonaccorso <carnil@debian.org>
    Seconded: Simon McVittie <smcv@debian.org>
    Closes: #661933
  * Policy: Prohibit deprecated < and > relations
    Wording: Jakub Wilk <jwilk@debian.org>
    Seconded: Cyril Brulebois <kibi@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Closes: #663918
  * Policy: Document the Built-Using field
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Ansgar Burchardt <ansgar@debian.org>
    Closes: #641153
  * Policy: Document the Vcs-* fields
    Wording: Charles Plessy <plessy@debian.org>
    Wording: Jonathan Nieder <jrnieder@gmail.com>
    Seconded: Russ Allbery <rra@debian.org>