@@ -55,6 +55,9 @@ Unreleased.
   <item>New section documenting the <tt>Package-Type</tt> field in source
   package control files.
   </item>
+<tag>debconf</tag>
+  <item>The <tt>escape</tt> capability is now documented.
+  </item>
 </taglist></p>
 
 <sect id="3.9.4.0"> Version 3.9.4.0
